--- a/src/MethodBoundaryAspect.Fody/MethodBoundaryAspect.Fody.csproj
+++ b/src/MethodBoundaryAspect.Fody/MethodBoundaryAspect.Fody.csproj
@@ -1,6 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net461;netstandard2.0</TargetFrameworks>
+    <PackageId>Emisand.MethodBoundaryAspect.Fody</PackageId>
+    <Version>2.1.0</Version>
+    <FileVersion>2.1.0</FileVersion>
+    <AssemblyName>Emisand.MethodBoundaryAspect.Fody</AssemblyName>
   </PropertyGroup>
       
   <ItemGroup>
